# CSM-Service-ObjectDetection

./: .gitmodules  ATTRIBUTIONS.md  BUILDING.md  CMakeLists.txt  DEVELOPMENT.md  README.md  csm-service-objectdetection.service
.github/workflows/: docker.yml
3rd/: CMakeLists.txt
docker/: Dockerfile  Dockerfile.jetsonnano
scripts/: benchmark.py  build-opencv.sh
src/: CMakeLists.txt
src/Service/: Main.cpp
